
  [ Aurélien COUDERC ]
  * Fix lintian warning command-with-path-in-maintainer-script in
    postinst script.
  * Remove references to long gone KDE3 globals in maintainer scripts.
    (Closes #659549)
  * README.Debian: inform about updating initrds too. (Closes #612163)
  * Document use of sync use before grub update in postinst. (Closes #611364)

 -- Coucouf <coucouf@Grumly>  Tue, 06 Sep 2016 08:14:12 +0200

desktop-base (8.0.2) unstable; urgency=medium

  * Reinstate login-background.svg. Closes: #773015.

 -- Josselin Mouette <joss@debian.org>  Sat, 13 Dec 2014 20:52:34 +0100

desktop-base (8.0.1) unstable; urgency=medium

  [ Coucouf ]
  * Fix KSplash preview for Lines. (Closes: #772900)

  [ Josselin Mouette ]
  * Remove old GDM theme.
  * Add GDM/GNOME lockscreen based on Lines.
  * gsettings-override: set it as the default.
  * Update gnome-backgrounds.xml. Closes: #772944.

 -- Josselin Mouette <joss@debian.org>  Fri, 12 Dec 2014 19:22:33 +0100

desktop-base (8.0.0) unstable; urgency=medium

  [ Aurélien COUDERC ]
  * Additional support for Lines theme:
    - Add plymouth Lines theme.
    - Add KDM Lines theme and make it default.
    - Add QML Lines theme for ksplash and make it default for new users.
    - Add widescreen alternative for grub background.
    - Add KDE wallpaper.
  * Fix incorrect icon references in desktop files.
    (Closes: #607838, #628116, #628146)
  * Link desktop-background.xml alternative to Lines by default.
    (Closes: #766232)
  * Drop remaining elements from Blueish, Curves and Nightly themes.
    (Closes: #607839)
  * Update copyright file, thanks Francesco Poli. (Closes: #772417)

  [ Yves-Alexis Perez ]
  * Upload to unstable.

 -- Yves-Alexis Perez <corsac@debian.org>  Thu, 11 Dec 2014 09:10:05 +0100

desktop-base (8.0.0~exp1) experimental; urgency=low

  [ Eshat Cakar ]
  * Ksplash: Avoid crash on resolutions with 600 pixels of
    height. (Closes: #689823)

  [ Paul Tagliamonte ]