@@ -20,7 +20,7 @@ README for desktop-base
 1.2. Pixmaps
 /usr/share/pixmaps/debian-security.png
 
-1.3.  Splash, wallpapers and grub images
+1.3.  Grub, boot, login and wallpapers themes
 
 Wallpapers are provided in two svg variant, one standard aspect (4/3) and one
 widescreen (16/9). You can switch from one another using the alternatives.
@@ -29,16 +29,16 @@ that changing alternative means at the next package upgrade it won't be
 automatically reverted to the default choice.
 
 For wallpaper you can run:
-
   sudo update-alternatives --config desktop-background
 
 For splash screens you can run:
-
   sudo update-alternatives --config desktop-splash
+
+For login screen (only SDDM for now) you can run:
+  sudo update-alternatives --config desktop-login-background
 
 For grub, you can select standard or widescreen version too. Widescreen can be
 better in particular for UEFI firmwares:
-
   sudo update-alternatives --config desktop-grub
 
 2. Desktop files
