@@ -1,0 +1,2 @@
+[General]
+background=/usr/share/images/desktop-base/login-background.svg
