@@ -7,6 +7,10 @@ desktop-base (9.0.0~exp1) UNRELEASED; urgency=medium
     (Closes #659549)
   * README.Debian: inform about updating initrds too. (Closes #612163)
   * Document use of sync use before grub update in postinst. (Closes #611364)
+  * Add SDDM theming for KDE/Plasma 5:
+    - Based on default SDDM theme breeze + Debian theme background.
+    - Can be configured with alternatives (also works in lightdm).
+   (Closes: #415064, #608523, #611170, #670866, #762276)
 
  -- Coucouf <coucouf@Grumly>  Tue, 06 Sep 2016 08:14:12 +0200
 
